fixed overflow in photography section and margin problem on phone screens

--- a/src/App.css
+++ b/src/App.css
@@ -30,8 +30,11 @@
 .container {
   display: flex;
   height: 95vh;
+  overflow-y: auto;
 }
-
+.container::-webkit-scrollbar {
+  display: none;
+}
 /* NAVBAR */
 
 .NavBar2 {
